# MiniC

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  minic.cpp  minic.h  readme.md
MiniC/: .gitignore  CMakeLists.txt  main.cpp
MiniC/include/: AST.h  CLI.h  IR.h  MCLog.h  Parser.h  Scanner.h  SymTable.h  Token.h  VM.h
MiniC/src/: AST.cpp  CLI.cpp  IR.cpp  MCLog.cpp  Parser.cpp  Scanner.cpp  SymTable.cpp  Token.cpp  VM.cpp
