#设置CMAKE最小版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(MINIC VERSION 0.1.0)

#设置编译器
SET (CMAKE_CXX_COMPILER "C:/software/dev/msys64/mingw64/bin/g++.exe")
#设置构建类型，及相应的编译选项
# SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++17 -O0 -Wall -g -ggdb -static")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=c++17 -O2 -Wall -static")


# ADD_COMPILE_OPTIONS(-std=c++17 -Wall -Werror)

#头文件搜索目录
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
#当前目录的文件
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LIST)

#设置执行文件输出目录
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_EXECUTABLE(minic ${SRC_LIST} main.cpp)




